[package]
name = "nannou-playground"
version = "0.1.0"
authors = ["Drif <0xd21f@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15"

[[example]]
name = "sketch_18aug2022"
path = "examples/sketch_18aug2022.rs"